Added a table, table row, and table header information

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   </head>
   <body>
     <main>
-      <!-- Complete the Exercises HERE -->
+      <table>
+        <tr>
+          <th>Drink</th>
+          <th>Total Servings</th>
+          <th>Serving Size</th>
+          <th>Calories Per Serving</th>
+          <th>Carbs Per Serving</th>
+          <th>Sugars Per Serving</th>
+          <th>Sodium Per Serving</th>
+        </tr>
+      </table>
     </main>
   </body>
 </html>
