Added 5 beverages and their nutrition information to the table

--- a/index.html
+++ b/index.html
@@ -17,6 +17,51 @@
           <th>Sugars Per Serving</th>
           <th>Sodium Per Serving</th>
         </tr>
+        <tr>
+          <td>Coca Cola</td>
+          <td>1</td>
+          <td>12 oz can</td>
+          <td>140</td>
+          <td>39g</td>
+          <td>39g</td>
+          <td>45mg</td>
+        </tr>
+        <tr>
+          <td>Pepsi</td>
+          <td>1</td>
+          <td>12 oz can</td>
+          <td>150</td>
+          <td>41g</td>
+          <td>41g</td>
+          <td>30mg</td>
+        </tr>
+        <tr>
+          <td>Coca Cola Zero</td>
+          <td>1</td>
+          <td>12 oz can</td>
+          <td>0</td>
+          <td>0g</td>
+          <td>0g</td>
+          <td>40mg</td>
+        </tr>
+        <tr>
+          <td>Dr. Pepper</td>
+          <td>1</td>
+          <td>12 oz can</td>
+          <td>150</td>
+          <td>40g</td>
+          <td>39g</td>
+          <td>55mg</td>
+        </tr>
+        <tr>
+          <td>Mountain Dew</td>
+          <td>1</td>
+          <td>12 oz can</td>
+          <td>160</td>
+          <td>44g</td>
+          <td>43g</td>
+          <td>50mg</td>
+        </tr>
       </table>
     </main>
   </body>
