Added some sections and a heading

--- a/index.html
+++ b/index.html
@@ -7,62 +7,79 @@
   </head>
   <body>
     <main>
-      <table>
-        <tr>
-          <th>Drink</th>
-          <th>Total Servings</th>
-          <th>Serving Size</th>
-          <th>Calories Per Serving</th>
-          <th>Carbs Per Serving</th>
-          <th>Sugars Per Serving</th>
-          <th>Sodium Per Serving</th>
-        </tr>
-        <tr>
-          <td>Coca Cola</td>
-          <td>1</td>
-          <td>12 oz can</td>
-          <td>140</td>
-          <td>39g</td>
-          <td>39g</td>
-          <td>45mg</td>
-        </tr>
-        <tr>
-          <td>Pepsi</td>
-          <td>1</td>
-          <td>12 oz can</td>
-          <td>150</td>
-          <td>41g</td>
-          <td>41g</td>
-          <td>30mg</td>
-        </tr>
-        <tr>
-          <td>Coca Cola Zero</td>
-          <td>1</td>
-          <td>12 oz can</td>
-          <td>0</td>
-          <td>0g</td>
-          <td>0g</td>
-          <td>40mg</td>
-        </tr>
-        <tr>
-          <td>Dr. Pepper</td>
-          <td>1</td>
-          <td>12 oz can</td>
-          <td>150</td>
-          <td>40g</td>
-          <td>39g</td>
-          <td>55mg</td>
-        </tr>
-        <tr>
-          <td>Mountain Dew</td>
-          <td>1</td>
-          <td>12 oz can</td>
-          <td>160</td>
-          <td>44g</td>
-          <td>43g</td>
-          <td>50mg</td>
-        </tr>
-      </table>
+      <h1>Important Nutrition Facts for Beverages</h1>
+      <section>
+        <table>
+          <thead>
+          <tr>
+            <th>Drink</th>
+            <th>Total Servings</th>
+            <th>Serving Size</th>
+            <th>Calories Per Serving</th>
+            <th>Carbs Per Serving</th>
+            <th>Sugars Per Serving</th>
+            <th>Sodium Per Serving</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Coca Cola</td>
+            <td>1</td>
+            <td>12oz can</td>
+            <td>140</td>
+            <td>39g</td>
+            <td>39g</td>
+            <td>45mg</td>
+          </tr>
+          <tr>
+            <td>Pepsi</td>
+            <td>1</td>
+            <td>12oz can</td>
+            <td>150</td>
+            <td>41g</td>
+            <td>41g</td>
+            <td>30mg</td>
+          </tr>
+          <tr>
+            <td>Coca Cola Zero</td>
+            <td>1</td>
+            <td>12oz can</td>
+            <td>0</td>
+            <td>0g</td>
+            <td>0g</td>
+            <td>40mg</td>
+          </tr>
+          <tr>
+            <td>Dr. Pepper</td>
+            <td>1</td>
+            <td>12oz can</td>
+            <td>150</td>
+            <td>40g</td>
+            <td>39g</td>
+            <td>55mg</td>
+          </tr>
+          <tr>
+            <td>Mountain Dew</td>
+            <td>1</td>
+            <td>12oz can</td>
+            <td>160</td>
+            <td>44g</td>
+            <td>43g</td>
+            <td>50mg</td>
+          </tr>
+          <tr>
+            <td>Water</td>
+            <td>1</td>
+            <td>8oz</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>12mg</td>
+          </tr>
+        </tbody>
+        </table>
+      </section>
+      <section>
       <form>
         <label for="drink">Drink</label>
         <input type="text">
@@ -87,6 +104,7 @@
 
         <button type="submit">Submit</button>
       </form>
+    </section>
     </main>
   </body>
 </html>
